tests/ui/panic-handler/panic-handler-bad-signature-4.stderr
error: #[panic_handler] cannot have generic parameters other than lifetimes
  --> $DIR/panic-handler-bad-signature-4.rs:9:1
   |
LL | #[panic_handler]
   | ---------------- required by this attribute
LL | fn panic<T>(pi: &PanicInfo) -> ! {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

